tests/lean/1299.lean.expected.out
(a, a)
d1 : true = true
def d1 : true = true :=
new_ax
(a, a)
1299.lean:13:8: error: invalid theorem 'd2', theorems should not depend on axioms introduced using tactics (solution: mark theorem as a definition)
theorem d2 : true = true :=
⁇
